# COM_S_557_Final_Project

./: Implemented Features.txt  README.md
Project/: CMakeLists.txt  Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  Lights.cpp  Lights.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Plane.cpp  Plane.h  SOIL.h  Shader.cpp  Shader.h  Texture.h  Vertex.h  assimp-vc140-mt.lib  main.cpp  stb_image_aug.c
Project/data/models/brickfloor/: brickfloor.blend  brickfloor.mtl
Project/data/models/flesh_creature/: flesh_creature.blend  flesh_creature.blend1  flesh_creature_run4.mtl
Project/data/models/gem/: gem.mtl
Project/data/shaders/: cubemap.fs  cubemap.vs  singleTexture.fs  singleTexture.vs  standard.fs  standard.vs  texturedMultiLights.fs
data/modelSpec/: church.txt  dolphin.txt  house.txt
data/shaders/: standard.fs  standard.vs
gl_common/: HCI557Common.cpp  controls.cpp
